--- a/Jane2zWaDa3wa/res/values/strings.xml
+++ b/Jane2zWaDa3wa/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="remove">حذف</string>
     <string name="update">تحديث</string>
     <string name="modifications">تعديل التعليق</string>
+    <string name="select_place">الرجاء إختيار مدينة</string>
 </resources>
