--- a/Jane2zWaDa3wa/res/values/strings.xml
+++ b/Jane2zWaDa3wa/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="comment_text">التعليق :</string>
     <string name="please_fill">الرجاء ملء كل الفراغات</string>
     <string name="empty_list">قائمة فارغة</string>
+    <string name="amaken">إختر المدينة</string>
     <string name="wait_other_download">الرجاء الانتظار... جاري تحميل حديث أخر</string>
     <string name="comments">التعليقات</string>
     <string name="remove">حذف</string>
