--- a/Jane2zWaDa3wa/res/values/strings.xml
+++ b/Jane2zWaDa3wa/res/values/strings.xml
@@ -82,6 +82,7 @@
 
     <string name="empty_add_janaza_mouhadhra">الرجاء ملء جميع الفراغات !</string>
     
+    <string name="success_add">تمت الاضافة بنجاح</string>
     <string name="error_add">خطأ في الإضافة ! الرجاء المحاولة لاحقاً !</string>
     
 </resources>
