--- a/Jane2zWaDa3wa/res/values/strings.xml
+++ b/Jane2zWaDa3wa/res/values/strings.xml
@@ -99,5 +99,6 @@
     <string name="propositions">إقتراحات</string>
     <string name="admin_menu">لوحة التحكم</string>
     <string name="login_title">تسجيل الدخول</string>
+    <string name="ok">تم</string>
     
 </resources>
