login issue resolved

--- a/Jane2zWaDa3wa/res/values/strings.xml
+++ b/Jane2zWaDa3wa/res/values/strings.xml
@@ -100,5 +100,6 @@
     <string name="admin_menu">لوحة التحكم</string>
     <string name="login_title">تسجيل الدخول</string>
     <string name="ok">تم</string>
+    <string name="check_login_password">رجاء التأكد من إسم الدخول و كلمة السر</string>
     
 </resources>
